add_executable(test_complex test_complex.cpp)
add_executable(test_rational test_rational.cpp)
add_executable(test_dynarr test_dynarr.cpp)
add_executable(test_stackarr test_stackarr.cpp)
add_executable(test_stackarrt test_stackarrt.cpp unittest.hpp)
add_executable(test_stacklst test_stacklst.cpp)
add_executable(test_queuelst test_queuelst.cpp)
add_executable(test_queuearr test_queuearr.cpp)
add_executable(test_queuelstpr test_queuelstpr.cpp)
add_executable(test_bitset test_bitset.cpp)
add_executable(test_stacklstt test_stacklstt.cpp unittest.hpp)
add_executable(test_dynarrt test_dynarrt.cpp unittest.hpp)
add_executable(test_queuelstt test_queuelstt.cpp unittest.hpp)
add_executable(test_queuelstprt test_queuelstprt.cpp unittest.hpp)
add_executable(test_queuearrt test_queuearrt.cpp unittest.hpp)

target_link_libraries(test_complex complex)
target_link_libraries(test_rational rational)
target_link_libraries(test_dynarr dynarr)
target_link_libraries(test_dynarrt dynarrt)
target_link_libraries(test_stackarr stackarr)
target_link_libraries(test_stackarrt stackarrt)
target_link_libraries(test_stacklst stacklst)
target_link_libraries(test_queuelst queuelst)
target_link_libraries(test_queuearr queuearr)
target_link_libraries(test_queuelstpr queuelstpr)
target_link_libraries(test_bitset bitset)
target_link_libraries(test_stacklstt stacklstt)
target_link_libraries(test_queuelstt queuelstt)
target_link_libraries(test_queuelstprt queuelstprt)
target_link_libraries(test_queuearrt queuearrt)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_complex)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_rational)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_dynarr)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_dynarrt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stackarr)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stackarrt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stacklst)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stacklstt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuelst)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuelstt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuearr)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuearrt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuelstpr)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_queuelstprt)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_bitset)